--- a/SITE/html/index.html
+++ b/SITE/html/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="container">
-            <img id="logo" src="../img/cabecalho.png">
+            <img class="logo" src="../img/cabecalho.png">
             <ul>
                 <li class="agora"> <a href="">Home</a> </li>
                 <li> <a href="">Sobre</a> </li>
@@ -25,9 +25,9 @@
     </header>
 
     <div class="banner">
-        <div class="container">
+        <div class="container-2">
             <p>O SEU PRODUTO NO <span>NEXT LEVEL</span>!!!</p>
-            <button onclick="cadastrese()">CADASTRE-SE</button>
+            <button class="botao" onclick="cadastrese()">CADASTRE-SE</button>
         </div>
     </div>
     <div class="continuacao">
