--- a/SITE/html/index.html
+++ b/SITE/html/index.html
@@ -14,7 +14,7 @@
         <div class="container">
             <img class="logo" src="../img/cabecalho.png">
             <ul>
-                <li class="agora"> <a href="">Home</a> </li>
+                <li class="agora"><a href="">Home</a> </li>
                 <li> <a href="">Sobre</a> </li>
                 <li> <a href="">Sobre nós</a> </li>
                 <li>|</li>
@@ -26,16 +26,13 @@
 
     <div class="banner">
         <div class="container-2">
-            <p>O SEU PRODUTO NO <span>NEXT LEVEL</span>!!!</p>
+            <p>Seu produto no <span>Next Level !!!</span></p>
             <button class="botao" onclick="cadastrese()">CADASTRE-SE</button>
         </div>
     </div>
-    <div class="continuacao">
-        <div container>
-            <img src="../img/Group 1.png" id="imagemLogo">
-        </div>
-    </div>
-
+        <main>  
+            <img src="../img/Group 1.png">
+        </main>
 
 </body>
 
