--- a/SITE/html/index.html
+++ b/SITE/html/index.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <header>
+    <header> 
+    <div class="cabecalho">
         <div class="container">
             <img class="logo" src="../img/cabecalho.png">
             <ul>
@@ -22,6 +23,7 @@
                 <li><a href="">Cadastro</a></li>
             </ul>
         </div>
+    </div>
     </header>
 
     <div class="banner">
@@ -33,7 +35,6 @@
         <main>  
             <img src="../img/Group 1.png">
         </main>
-
 </body>
 
 </html>
