--- a/SITE/html/login.html
+++ b/SITE/html/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/login.css">
     <title>Icelog</title>
 </head>
 
@@ -15,26 +15,13 @@
         <div class="container">
             <a href="../html/index.html"><img class="logo" src="../img/cabecalho.png"></a>
             <ul>
-                <li class="agora"><a href="../html/index.html">Home</a> </li>
+                <li><a href="../html/index.html">Home</a> </li>
                 <li> <a href="">Sobre</a> </li>
                 <li> <a href="">Sobre nós</a> </li>
                 <li>|</li>
-                <li><a href="../html/login.html">Login</a> </li>
+                <li class="agora"><a href="">Login</a> </li>
                 <li><a href="">Cadastro</a></li>
             </ul>
         </div>
     </div>
     </header>
-
-    <div class="banner">
-        <div class="container-2">
-            <p>Seu produto no <span>Next Level !!!</span></p>
-            <button class="botao" onclick="cadastrese()">CADASTRE-SE</button>
-        </div>
-    </div>
-        <main>  
-            <img src="../img/Group 1.png">
-        </main>
-</body>
-
-</html>
