--- a/SITE/html/login.html
+++ b/SITE/html/login.html
@@ -10,18 +10,31 @@
 </head>
 
 <body>
-    <header> 
-    <div class="cabecalho">
-        <div class="container">
-            <a href="../html/index.html"><img class="logo" src="../img/cabecalho.png"></a>
-            <ul>
-                <li><a href="../html/index.html">Home</a> </li>
-                <li> <a href="">Sobre</a> </li>
-                <li> <a href="">Sobre nós</a> </li>
-                <li>|</li>
-                <li class="agora"><a href="">Login</a> </li>
-                <li><a href="">Cadastro</a></li>
-            </ul>
+    <header>
+        <div class="cabecalho">
+            <div class="container">
+                <a href="../html/index.html"><img class="logo" src="../img/cabecalho.png"></a>
+                <ul>
+                    <li><a href="../html/index.html">Home</a> </li>
+                    <li> <a href="">Sobre</a> </li>
+                    <li> <a href="">Sobre nós</a> </li>
+                    <li>|</li>
+                    <li class="agora"><a href="">Login</a> </li>
+                    <li><a href="">Cadastro</a></li>
+                </ul>
+            </div>
+        </div>
+    </header>
+
+    <div class="containerLogin">
+        <h2 id="login">Login:</h2>
+        <div class="card">
+            <h4 class="titulo">Email:</h4>
+            <input class="ipt" type="text" placeholder="Insira o seu email">
+            <h4 class="titulo">Senha:</h4>
+            <input class="ipt" type="password" placeholder="Insira sua senha">
+            <button class="btn">Entrar</button>
         </div>
     </div>
-    </header>
+</body>
+</html>
