--- a/SITE/html/login.html
+++ b/SITE/html/login.html
@@ -30,11 +30,12 @@
         <h2 id="login">Login:</h2>
         <div class="card">
             <h4 class="titulo">Email:</h4>
-            <input class="ipt" type="text" placeholder="Insira o seu email">
+            <input class="ipt" type="email" placeholder="Insira o seu email">
             <h4 class="titulo">Senha:</h4>
             <input class="ipt" type="password" placeholder="Insira sua senha">
             <button class="btn">Entrar</button>
         </div>
     </div>
 </body>
+
 </html>
