--- a/SITE/html/cadastroP2.html
+++ b/SITE/html/cadastroP2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/login.css">
+    <link rel="stylesheet" href="../css/cadastro.css">
     <title>Icelog</title>
 </head>
 
@@ -18,21 +18,31 @@
                     <li><a href="../html/index.html">Home</a> </li>
                     <li> <a href="">Sobre</a> </li>
                     <li>|</li>
-                    <li class="agora"><a href="">Login</a> </li>
-                    <li><a href="../html/cadastroP1.html">Cadastro</a></li>
+                    <li><a href="../html/login.html">Login</a> </li>
+                    <li class="agora"><a href="../html/cadastroP1.html">Cadastro</a></li>
                 </ul>
             </div>
         </div>
     </header>
 
     <div class="containerLogin">
-        <h2 id="login">Login:</h2>
+        <h2 id="login">Cadastro:</h2>
         <div class="card">
-            <h4 class="titulo">Email:</h4>
-            <input class="ipt" type="email" placeholder="Insira o seu email">
-            <h4 class="titulo">Senha:</h4>
+            <h4 class="titulo">CEP:</h4>
+            <input class="ipt" type="text" placeholder="Insira o seu email">
+
+            <h4 class="titulo">Rua:</h4>
+            <input class="ipt" type="text" placeholder="Insira sua senha">
+
+
+            <h4 class="titulo">Bairro:</h4>
+            <input class="ipt" type="text" placeholder="Insira sua senha">
+
+
+            <h4 class="titulo">Cidade:</h4>
             <input class="ipt" type="password" placeholder="Insira sua senha">
-            <button class="btn">Entrar</button>
+            <button class="btn">Cadastrar</button>
+
         </div>
     </div>
 </body>
