--- a/SITE/html/index.html
+++ b/SITE/html/index.html
@@ -19,7 +19,7 @@
                     <li> <a href="">Sobre</a> </li>
                     <li>|</li>
                     <li><a href="../html/login.html">Login</a> </li>
-                    <li><a href="">Cadastro</a></li>
+                    <li><a href="../html/cadastroP1.html">Cadastro</a></li>
                 </ul>
             </div>
         </div>
